--- a/_scss/_head.scss
+++ b/_scss/_head.scss
@@ -10,4 +10,10 @@
   &--no-image{
     height:auto;
   }
+  &:after{
+    width:100%;
+    height:100%;
+    content:" ";
+    background:rgba(0,0,0,0.5);
+  }
 }
